# ai2agent

./: main.py  pyproject.toml  requirements.txt  test.py
my-bare/: pyproject.toml
my-ext/: Cargo.toml  pyproject.toml
my-ext/src/: lib.rs
my-ext/src/my_ext/: __init__.py
my-lib/: pyproject.toml
my-pkg/: pyproject.toml
my-pkg/src/my_pkg/: __init__.py
