[project]
name = "my-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zyad Sowilam", email = "96208685+Zyadsowilam@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-ext = "my_ext:main"

[tool.maturin]
module-name = "my_ext._core"
python-packages = ["my_ext"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
