[project]
name = "my-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zyad Sowilam", email = "96208685+Zyadsowilam@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-pkg = "my_pkg:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
